--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/changePassword"
+        android:title="비밀번호 변경"/>
+
     <item android:id="@+id/logout"
         android:title="로그아웃"/>
+
+
+    <item android:id="@+id/secession"
+        android:title="탈퇴하기"/>
 
 </menu>
