--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,17 +70,16 @@
 
     <TextView
         android:id="@+id/GoSighUpActivityTextView"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="아직 계정이 갖고 있지 않나요?"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/mapo"
+        android:text="아직 계정을 갖고 있지 않나요?"
         android:textColor="#444F8C"
         android:textStyle="bold"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
