--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
 
 
     <EditText
+        android:inputType="textEmailAddress"
         android:textColor="@android:color/black"
         android:id="@+id/emailEditTextLogin"
         app:layout_constraintTop_toBottomOf="@id/LogoTextViewLogin"
@@ -39,6 +40,7 @@
         />
 
     <EditText
+        android:inputType="textPassword"
         android:textColor="@android:color/black"
         android:id="@+id/passwordEditTextLogin"
         app:layout_constraintTop_toBottomOf="@id/emailEditTextLogin"
