이제 코드를 조금 더 정리하고, 부가적인 기능을 추가하면 끝!

--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -11,4 +11,7 @@
     <item android:id="@+id/secession"
         android:title="탈퇴하기"/>
 
+    <item android:id="@+id/introduceDeveloper"
+        android:title="개발자 소개"/>
+
 </menu>
