--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -348,6 +348,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navi_menu"/>
+        app:menu="@menu/navi_menu"
+        app:headerLayout="@layout/navigation_view_header_layout"
+        />
 
 </androidx.drawerlayout.widget.DrawerLayout>
