--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -2,16 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/changePassword"
-        android:title="비밀번호 변경"/>
+        android:title="비밀번호 변경"
+        android:icon="@drawable/password"
+        />
 
     <item android:id="@+id/logout"
-        android:title="로그아웃"/>
+        android:title="로그아웃"
+        android:icon="@drawable/logout"
+        />
 
 
     <item android:id="@+id/secession"
-        android:title="탈퇴하기"/>
+        android:title="탈퇴하기"
+        android:icon="@drawable/delete_user"
+        />
 
     <item android:id="@+id/introduceDeveloper"
-        android:title="개발자 소개"/>
+        android:title="개발자 소개"
+        android:icon="@drawable/developer"
+        />
 
 </menu>
