--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -348,8 +348,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navi_menu"
-        app:headerLayout="@layout/navigation_view_header_layout"
-        />
+        app:menu="@menu/navi_menu"/>
+<!--        app:headerLayout="@layout/navigation_view_header_layout"-->
 
 </androidx.drawerlayout.widget.DrawerLayout>
