--- a/app/src/main/res/layout/navigation_view_header_layout.xml
+++ b/app/src/main/res/layout/navigation_view_header_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,22 +7,17 @@
 
     <ImageView
         android:id="@+id/userImageView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/userInformationLayout"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:src="@drawable/user"/>
 
     <LinearLayout
+        android:layout_marginTop="15dp"
         android:id="@+id/userInformationLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/userImageView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:orientation="vertical"
         android:layout_marginLeft="15dp"
         android:layout_marginBottom="10dp"
@@ -92,11 +87,12 @@
 
 
     <View
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp"
+        android:id="@+id/headerLayoutBottomView"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/black"
         />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
