--- a/app/src/main/res/drawable/secession_answer_button_background.xml
+++ b/app/src/main/res/drawable/secession_answer_button_background.xml
@@ -7,7 +7,7 @@
 
             <stroke
                 android:width="1dp"
-                android:color="#58B3B2"/>
+                android:color="#000000"/>
 
 
         </shape>
