--- a/app/src/main/res/drawable/secession_dialog_background.xml
+++ b/app/src/main/res/drawable/secession_dialog_background.xml
@@ -5,9 +5,11 @@
 
         <shape>
 
+
             <stroke
-                android:width="1dp"
-                android:color="#58B3B2"/>
+                android:width="2dp"
+                android:color="@android:color/black"/>
+
 
         </shape>
 
