이제 코드를 조금 더 정리하고, 부가적인 기능을 추가하면 끝!

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
 
 
     <EditText
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@."
         android:inputType="textEmailAddress"
         android:textColor="@android:color/black"
         android:id="@+id/emailEditTextLogin"
@@ -40,6 +41,7 @@
         />
 
     <EditText
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@."
         android:inputType="textPassword"
         android:textColor="@android:color/black"
         android:id="@+id/passwordEditTextLogin"
