이제 코드를 조금 더 정리하고, 부가적인 기능을 추가하면 끝!

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,7 @@
 
     <EditText
         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@."
+        android:maxLength="28"
         android:inputType="textEmailAddress"
         android:textColor="@android:color/black"
         android:id="@+id/emailEditTextLogin"
