--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -40,22 +40,22 @@
         />
 
     <EditText
-        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@."
-        android:maxLength="30"
-        android:inputType="textEmailAddress"
-        android:maxLines="1"
-        android:textColor="@android:color/black"
         android:id="@+id/emailEditTextSignUp"
-        app:layout_constraintTop_toBottomOf="@id/idEditTextSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="email"
-        android:textStyle="bold"
-        android:fontFamily="@font/mapo"
         android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="16dp"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@."
+        android:fontFamily="@font/mapo"
+        android:hint="email"
+        android:inputType="textEmailAddress"
+        android:maxLength="28"
+        android:maxLines="1"
+        android:textColor="@android:color/black"
         android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        />
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/idEditTextSignUp"
+        tools:layout_editor_absoluteX="30dp" />
 
     <EditText
         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@."
