이제 코드를 조금 더 정리하고, 부가적인 기능을 추가하면 끝! //아이디 수정하고 navigationView 에 바로 반영이 안 됨.

--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/changeId"
+        android:title="아이디 변경"
+        android:icon="@drawable/id"/>
+
+    <item android:id="@+id/changeEmail"
+        android:title="이메일 변경"
+        android:icon="@drawable/email"/>
+
     <item android:id="@+id/changePassword"
         android:title="비밀번호 변경"
         android:icon="@drawable/password"
