--- a/app/src/main/res/layout/activity_change_id_chapter_one.xml
+++ b/app/src/main/res/layout/activity_change_id_chapter_one.xml
@@ -4,23 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ChangePasswordChapterTwoActivity">
+    tools:context=".activity.ChangeIdChapterOneActivity">
 
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/left_arrow"
-        android:id="@+id/backIntentImageViewChapterTwoPassword"
+        android:id="@+id/backIntentImageViewChapterOneId"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"/>
 
     <TextView
-        android:id="@+id/changePasswordTitleTextViewChapterTwo"
+        android:id="@+id/changeIdTitleTextViewChapterOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비밀번호 변경"
+        android:text="아이디 변경"
         android:textStyle="bold"
         android:textColor="@android:color/black"
         android:fontFamily="@font/mapo"
@@ -32,16 +32,15 @@
         />
 
     <EditText
-        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@."
         android:maxLines="1"
         android:maxLength="15"
         android:inputType="textPassword"
         android:textColor="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/changePasswordTitleTextViewChapterTwo"
-        android:id="@+id/changePasswordCheckEditTextChapterTwo"
-        android:hint="새로운 비밀번호 / 7 ~ 15자"
+        app:layout_constraintTop_toBottomOf="@id/changeIdTitleTextViewChapterOne"
+        android:id="@+id/changeIdCheckEditTextChapterOne"
+        android:hint="password"
         android:textStyle="bold"
         android:fontFamily="@font/mapo"
         android:layout_marginHorizontal="30dp"
@@ -49,15 +48,15 @@
         android:layout_marginTop="150dp"/>
 
     <Button
-        app:layout_constraintTop_toBottomOf="@id/changePasswordCheckEditTextChapterTwo"
+        app:layout_constraintTop_toBottomOf="@id/changeIdCheckEditTextChapterOne"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:elevation="10dp"
-        android:id="@+id/changePasswordEnterButtonChapterTwo"
+        android:id="@+id/changeIdEnterButtonChapterOne"
         android:background="@drawable/login_button_background"
         android:layout_width="200dp"
         android:layout_height="80dp"
-        android:text="비밀번호 변경"
+        android:text="아이디 변경"
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:fontFamily="@font/mapo"
