--- a/app/src/main/res/layout/memo_add_dialog.xml
+++ b/app/src/main/res/layout/memo_add_dialog.xml
@@ -211,6 +211,18 @@
             android:layout_marginRight="5dp"
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/memoPlanResetTextViewDialog"
+            android:text="초기화"
+            android:fontFamily="@font/mapo"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
