--- a/app/src/main/res/layout/navigation_view_header_layout.xml
+++ b/app/src/main/res/layout/navigation_view_header_layout.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <data>
+        
+        <variable
+            name="model"
+            type="com.simplepro.secondtodoandmemo.viewModel.NavigationViewModel" />
+        
+    </data>
+
+<LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="200dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <ImageView
@@ -42,7 +54,7 @@
         android:id="@+id/userIdTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="null"
+        android:text="@{model.userId}"
         android:fontFamily="@font/mapo"
         android:textColor="#776D6D"
         android:textSize="17dp"
@@ -72,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/userEmailTextView"
-        android:text="null"
+        android:text="@{model.userEmail}"
         android:fontFamily="@font/mapo"
         android:textStyle="bold"
         android:textColor="#776D6D"
@@ -96,3 +108,5 @@
 
 
 </LinearLayout>
+
+</layout>
