이용약관 내용 추가.

--- a/app/src/main/res/layout/terms_dialog.xml
+++ b/app/src/main/res/layout/terms_dialog.xml
@@ -79,7 +79,10 @@
             ⑥ '이용자'는 언제든지 '회사'가 가지고 있는 자신의 '개인정보'에 대해 열람 및 오류의 정정을 요구할 수 있으며, '회사'는 이에 대해 지체 없이 필요한 조치를 취할 의무를 집니다. '이용자'가 오류의 정정을 요구한 경우에는 '회사'는 그 오류를 정정할 때까지 당해 '개인정보'를 이용하지 않습니다.
             ⑦ '회사'는 개인정보보호를 위하여 관리자를 한정하여 그 수를 최소화하며, 신용카드, 은행계좌 등을 포함한 '이용자'의 '개인정보'의 분실, 도난, 유출, 변조 등으로 인한 '이용자'의 손해에 대하여 책임을 집니다.
             ⑧ '회사' 또는 그로부터 '개인정보'를 제공받은 자는 '이용자'가 동의한 범위 내에서 '개인정보'를 사용할 수 있으며, 목적이 달성된 경우에는 당해 '개인정보'를 지체 없이 파기합니다.
-            ⑨ '회사'는 정보통신망이용촉진 및 정보보호에 관한 법률 등 관계 법령이 정하는 바에 따라 '이용자'의 '개인정보'를 보호하기 위해 노력합니다. '개인정보'의 보호 및 사용에 대해서는 관련법령 및 '회사'의 개인정보보호정책이 적용됩니다.'"
+            ⑨ '회사'는 정보통신망이용촉진 및 정보보호에 관한 법률 등 관계 법령이 정하는 바에 따라 '이용자'의 '개인정보'를 보호하기 위해 노력합니다. '개인정보'의 보호 및 사용에 대해서는 관련법령 및 '회사'의 개인정보보호정책이 적용됩니다.'
+
+            데이터는 모두 서버에 저장되며 탈퇴된 아이디의 데이터는 수동적으로 삭제하고 있습니다.
+"
                 android:textColor="@android:color/black"
                 android:textSize="15dp" />
 
