--- a/app/src/main/res/layout/todo_list_item.xml
+++ b/app/src/main/res/layout/todo_list_item.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+
+    <data>
+
+        <variable
+            name="model"
+            type="com.simplepro.secondtodoandmemo.viewModel.TodoViewModel" />
+
+    </data>
+
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@drawable/todo_list_item_background"
@@ -22,7 +34,7 @@
             android:id="@+id/todoListTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TEST"
+            android:text="@{model.todo}"
             android:textStyle="bold"
             android:fontFamily="@font/mapo"
             android:textColor="@android:color/black"
@@ -36,7 +48,7 @@
             android:layout_height="50dp"
             android:padding="5dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:src="@drawable/done_icon"
             />
 
@@ -52,7 +64,21 @@
             android:layout_marginRight="5dp"
             />
 
+        <TextView
+            android:id="@+id/todoListRemoveButton"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="삭제"
+            android:fontFamily="@font/mapo"
+            android:textSize="13dp"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
+
+</layout>
