--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
 
     <style name="EditTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">#000000</item>
 
     </style>
 
