--- a/app/src/main/res/layout/navigation_view_header_layout.xml
+++ b/app/src/main/res/layout/navigation_view_header_layout.xml
@@ -8,7 +8,7 @@
         
         <variable
             name="model"
-            type="com.simplepro.onlinetodoandmemo.viewModel.NavigationViewModel" />
+            type="com.simplepro.secondtodoandmemo.viewModel.NavigationViewModel" />
         
     </data>
 
